force-app/main/default/objects/To_Do__c/To_Do__c.object-meta.xml
<CustomObject>
    <label>To Do</label>
    <nameField>
        <label>To Do  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>To Dos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>