force-app/main/default/objects/To_Do__c/fields/Desription__c.field-meta.xml
<CustomField>
    <fullName>Desription__c</fullName>
    <label>Description</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>