force-app/main/default/objects/To_Do__c/fields/Overdue_Status__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Status__c</fullName>
    <formula>IF(
  AND(
    Is_Completed__c = FALSE,
    Due_Date__c &lt; TODAY()
  ),
  &quot;Overdue&quot;,
  &quot;On Track&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overdue Status</label>
    <type>Text</type>
</CustomField>