force-app/main/default/objects/To_Do__c/validationRules/Due_Date_Field_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Due_Date_Field_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISBLANK(Due_Date__c),
    Is_Completed__c = FALSE
)</errorConditionFormula>
    <errorDisplayField>Due_Date__c</errorDisplayField>
    <errorMessage>Due Date is mandatory. Please enter a due date to save this task.</errorMessage>
</ValidationRule>