force-app/main/default/objects/To_Do__c/validationRules/Status_field_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_field_check</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status__c , &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Status is mandatory. Please select a valid status.</errorMessage>
</ValidationRule>