force-app/main/default/objects/To_Do__c/listViews/Overdue_Task.listView-meta.xml
<ListView>
    <fullName>Overdue_Task</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Overdue_Status__c</field>
        <operation>equals</operation>
        <value>Overdue</value>
    </filters>
    <filters>
        <field>Is_Completed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Overdue Tasks</label>
</ListView>